# laos

./: .env.example  .gitignore  AGENTS.md  B-side-prompt.md  README.md  TAKEOFF.md  env-local-template.txt  env-shared-template.txt  lacouncil.yaml  pyproject.toml  setup.ps1
.opencode/: opencode.jsonc
knowledge/: child-repo-hooks.md  data-conventions.md  data-fabrication-policy.md  data-quality-baseline.md  discover-before-build.md  eval-methodology.md  external-tools.md  glossario-negocio.md  handoff-lacareerops.md  kitchen-hierarchy.md  lacouncil-fallback-retirement.md  omo-adoption-provenance.md  opencode-permissions.md  padroes-entrega.md  readme-templates.md  sdd-principles.md  stack-decisions.md  subagent-result-contract.md  tool-permission-model.md
lacouncil/: .gitignore  CONSTITUTION.md  README.md  pyproject.toml  sdd-template.md
lacouncil/propostas/: template.md
lacouncil/scripts/: create_proposal_regra1.py  create_proposals_lacouncil_hygiene.py
lacouncil/src/lacouncil/: __init__.py  __main__.py
lacouncil/src/lacouncil/core/: __init__.py  duckdb_store.py  investigation.py  schemas.py  user_questions.py  voting.py
lacouncil/src/lacouncil/mcp/: __init__.py  server.py
lacouncil/tests/: __init__.py  test_cli_encoding.py  test_duckdb_path.py  test_user_questions.py
registry/: capabilities.yaml  needs-to-capabilities.yaml  workflows.yaml
scripts/: _backup_A.py  _cleanup_scratch.py  agent-hierarchy-test.md  bootstrap_laos.ps1  bootstrap_project.py  check_auth.py  child-repo-hooks.sh  create_github_repo.py  create_repo_final.py  delivery-hook.py  final_push.py  find_github_token.py  list_capabilities.py  load_env.py  migrate_lacouncil_wdl_signatures.py  post-merge.hook.py  (+15 more)
(+304 files in other folders)
