[project]
name = "laos"
version = "0.1.0"
description = "Laurent Agent Operating System - orchestration layer"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.4",
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
