[project]
name = "lacouncil"
version = "0.1.0"
description = "LACOUNCIL — In-Memory Structural Improvement Engine for LAOS"
requires-python = ">=3.11"
authors = [
    { name = "Laurent", email = "laurent@laurentaf.com" },
]
license = { text = "Proprietary" }
dependencies = [
    "duckdb>=0.10.0",
    "pydantic>=2.0",
    "mcp[cli]>=1.0",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
lacouncil = "lacouncil.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lacouncil"]

# MCP server entry — wired via `python lacouncil/mcp/server.py` from opencode.jsonc.
# LACOUNCIL_DB_PATH overrides the default ./memoria/lacouncil.duckdb.
[tool.lacouncil]
db_path_env = "LACOUNCIL_DB_PATH"
default_db_path = "memoria/lacouncil.duckdb"
constitution_path = "CONSTITUTION.md"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
